css/styles.css
body {
    margin: 0px;
    background-color: #2f2f2f;
    font-family:"Open Sans";
    color: #888888;
}

p {
    margin: 0 0 15px;
}

a {
    color: #bbbbbb;
    text-decoration: none;
}

a:hover {
    color: #ff5a11;
    text-decoration: underline;
}

h1 {
    margin-top: 0px;
    font-size: 25px;
}

h2 {
    margin-top: 0px;
    font-size: 21px;
}

h3 {
    margin-top: 0px;
    font-size: 17px;
}

article {
    margin-bottom: 35px;
}

hr {
    margin-bottom: 30px;
    color: #888888;
    background-color: #444444;
    border: none;
    height: 1px;
}

.post-date {
    margin-bottom: 15px;
    font-size: 13px;
    color: #666666;
}

#header {
    height: 220px;
    background-color: #282828;
    text-align: center;
}

#logo {
    padding: 30px;
}

#navigation ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
    text-align: center;
}

#navigation ul li {
    display: inline;
}

#navigation ul li a {
    font-weight: bold;
    text-decoration: none;
    padding: .2em 1.2em;
    color: #777777;
}

#navigation ul li a:hover {
    color: #bbbbbb;
}

#navigation ul li a.active {
    color: #bbbbbb;
}

#wrapper {
    width: 960px;
    margin: 0 auto;
    padding-top: 30px;
}

#splash-wrapper {
    width: 960px;

    /* Firefox */
    display: -moz-box;
    -moz-box-pack: center;
    -moz-box-align: center;

    /* Safari and Chrome */
    display:-webkit-box;
    -webkit-box-pack: center;
    -webkit-box-align: center;

    /* W3C */
    display: box;
    box-pack: center;
    box-align: center;
}

#splash {
    width: 735px;
    margin: 0 0 35px;
}

#download-button {
    float: left;
    padding: 14px 0;
    width: 217px;
    text-align: center;
    background-color: #ff6600;
    color: #2f2f2f;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
    cursor: pointer;
}

#download-button:hover {
    color: #ffffff;
}

#download-cta {
    text-transform: uppercase;
    font-weight: bold;
    font-size: 27px;
}

#splash-message {
    float: left;
    margin-left: 50px;
    width: 468px;
    font-weight: bold;
    line-height: 1.8em;
}

#video-carousel {
    margin-bottom: 35px;
}

#latest-news {
    float: left;
    width: 265px;
    text-transform: uppercase;
    font-weight: bold;
    font-size: 1.3em;
}

#news-container {
    float: left;
    margin-left: 42px;
    width: 653px;
}

.news-title {
    font-size: 1.1em;
}

.more-news {
    margin-top: 25px;
}

.clear {
    clear: both;
}

#footer-container {
    width:100%;

    /* Firefox */
    display:-moz-box;
    -moz-box-pack:center;
    -moz-box-align:center;

    /* Safari and Chrome */
    display:-webkit-box;
    -webkit-box-pack:center;
    -webkit-box-align:center;

    /* W3C */
    display:box;
    box-pack:center;
    box-align:center;

    margin-top: 35px;
    height: 195px;
    background-color: #282828;
}

#footer-inner {
    width: 660px;
}

.footer,
.footer a {
    color: #666666;
}

.footer h4 {
    margin-bottom: 11px;
    text-transform: uppercase;
}

.footer ul {
    padding: 0;
    margin: 0;
    list-style-type: none;
}

.footer ul li {
    margin-bottom: 5px;
}

#contact {
    float: left;
    margin-right: 30px;
    width: 200px;
}

#social ul > li {
    margin-top: 5px;
    margin-right: 10px;
    display: inline-block;
    zoom: 1;
    *display: inline;
}

#links {
    float: left;
    margin-right: 30px;
    width: 200px;
}

#copyright {
    float: left;
    width: 200px;
}

